--- a/Zoomag.csproj
+++ b/Zoomag.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Page Update="Views\ProductEditor.xaml">
+        <Page Update="Views\SupplyWindow.xaml">
             <Generator>MSBuild:Compile</Generator>
             <XamlRuntime>Wpf</XamlRuntime>
             <SubType>Designer</SubType>
